--- a/src/App.css
+++ b/src/App.css
@@ -2,9 +2,13 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.Timer{
+  background-color: red;
+  color: whitesmoke;
+}
+.Stopwatch{
+  background-color: blue;
+  color: whitesmoke;
 }
 
 @media (prefers-reduced-motion: no-preference) {
